tracking down and squashing css layout issues

--- a/_sass/_basic.scss
+++ b/_sass/_basic.scss
@@ -247,6 +247,20 @@ blockquote p {
 }
 */
 
+.caption {
+  background: #fff;
+  border-left: 10px solid #505160;
+  margin: 1.5em 10px;
+  padding: 0.5em 10px;
+	width: 800px;
+	margin-left: auto;
+	margin-right: auto;
+}
+
+.caption p {
+  display: inline;
+}
+
 .symbol {
 	font-size: 0.9em;
 	font-family: Times New Roman;
